--- a/settings/autolabel_settings.yaml
+++ b/settings/autolabel_settings.yaml
@@ -35,6 +35,7 @@ classes:
   - 7
   - 8
   - 9
+
 key_actions_normal:
   13: 'save' # enter
   32: 'modify' # space
@@ -49,6 +50,7 @@ key_actions_normal:
   83: 'switch_next' # S
   98: 'delete'  # b
   66: 'delete'  # B
+  9: 'switch_next_bbox' # tab
 
 key_actions_obb:
   27: 'exit'
